# who-said-that

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.py
src/backend/: config.py  database.py  main.py
src/backend/models/: __init__.py  game.py  person.py  quote.py  user.py
src/backend/routers/: auth.py  game.py  leaderboard.py
src/backend/schemas/: auth.py  game.py  leaderboard.py
src/backend/seed_data/: __init__.py  persons.py  quotes.py
src/backend/services/: auth_service.py  game_service.py  seed_service.py
src/frontend/: api_client.py  main.py  state.py  theme.py
src/frontend/views/: game_view.py  home_view.py  leaderboard_view.py  login_view.py  result_view.py
